--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body{ margin: 0; padding: 0; font-size: 30; }
-.header{background-color: green; padding: 3%; text-align:  centre ; }
-.container{ background-color: red; padding: 3%;  }
-.footer{ background-color: green; padding: 3%; text-align: centre;}
+body{ margin: 0; padding: 10; font-size: 40; }
+.header{background-color: blueviolet; padding: 5%; text-align:  centre ; }
+.container{ background-color: red; padding: 5%;  }
+.footer{ background-color: darkblue; padding: 5%; text-align: centre;}
